Brad Traversy Playground/style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    background: #fff;
    color: #000;
    font-size: 15px;
    line-height: 1.5;
}

a {
    color: #252525;
    text-decoration: none;
}

ul {
    list-style: none;
}

.container {
    width: 90%;
    max-width: 1100px;
    margin: auto;
}

/* Nav Area */
.main_nav {
    display: flex;
    align-items: center;
    height: 60px;
    padding: 20px 0;
    font-size: 13px;
}

.logo {
    width: 110px;
    margin-right: auto;
}

.main_nav ul {
    display: flex;
}

.main_nav ul li {
    padding: 0 10px;
}

.main_nav ul li a {
    padding-bottom: 2.5px;
}



.main_nav ul li a:hover {
    border-bottom: 2px solid #262626;
}

.main_nav ul.main_menu {
    flex: 1;
    margin-left: 20px;
}

.hamburger-btn {
    cursor: pointer;
    position: absolute;
    font-size: 22px;
    line-height: .1px;
    -webkit-text-stroke: .7px #fff;
    top: 20px;
    right: 30px;
    z-index: 2;
    display: none;
}

.btn {
    cursor: pointer;
    display: inline-block;
    border: 0;
    font-weight: bold;
    padding: 10px 20px;
    background: #262626;
    color: #fff;
    font-size: 15px;
}

.btn:hover {
    opacity: 0.9;
}

/* Showcase */

.showcase {
    width: 100%;
    height: 400px;
    background: url("img/slide1.png") no-repeat center center/cover;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: flex-end;
    padding-bottom: 52px;
    margin-bottom: 47px;
}

.showcase h2,
.showcase p {
    margin-bottom: 10px;
}

.showcase .btn {
    margin-top: 21px;
}

/* Home Cards */
.home_cards {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    grid-gap: 25px;
    margin-bottom: 47px;
}

.home_cards img {
    width: 100%;
    margin-bottom: 43px;
}

.home_cards h3 {
    margin-bottom: 5px;
}

.home_cards p {
    margin-bottom: 10px;
}

.home_cards a {
    display: inline;
    color: #005ea8;
    text-transform: uppercase;
    font-weight: 700;
}

.home_cards a:hover i {
    margin-left: 8px;
}

/* Xbox */

.xbox {
    width: 100%;
    height: 350px;
    background: url("img/xbox.png")no-repeat center center/cover;
    margin-bottom: 47px;
}

.xbox .content {
    width: 42%;
    padding: 57px 0 0 30px;
    margin-bottom: 10px;
}

.content p {
    margin: 10px 0 20px 0;
}

/* Onedrive */

.onedrive {
    width: 100%;
    height: 350px;
    background: url("img/onedrive.webp")no-repeat center center/cover;
    padding: 109px 0 0 30px;
    margin-bottom: 47px;
}

.onedrive_content p {
    margin: 20px 0 20px 0;
    width: 50%;
}

.onedrive_content .btn {
    text-transform: uppercase;
}

/* Follow Socials */

.follow {
    display: grid;
    grid-template-columns: 111px repeat(3, 33px);
    grid-gap: 14px;
    margin-bottom: 47px;
}

.follow a,
.follow p {
    display: grid;
    align-items: center;
}

/* Links */

.links {
    background-color: #f2f2f2;
    font-size: 11px;
    padding: 17px 0 47px 0;
}

.links_content {
    display: grid;
    grid-template-columns: repeat(6, 1fr);
    width: 90%;
    grid-gap: 10px;
    max-width: 1100px;
    margin: auto;
}

.links_content li {
    margin: 18px 0;
    color: #616161
}

.links_content h3 {
    font-size: 15px;
    font-weight: 600;
}

/* Footer */

.footer {
    background-color: #f2f2f2;
    margin-bottom: 47px;
}

.footer_content {
    font-size: 11px;
    max-width: 1100px;
    width: 90%;
    margin: auto;
}


.footer_content ul {
    display: grid;
    grid-template-columns: 30px repeat(13, auto);
    align-items: center;
    margin-right: 10px;
}

.footer_content div {
    grid-column: 2/7;
}

.footer_content ul,
.footer_content a {
    color: #616161;
}


/* Media Queries */

@media (max-width: 800px) {

    .hamburger-btn {
        display: block;
    }

    .hamburger-btn:hover {
        opacity: 0.5;
    }

    .main_nav .main_menu {
        display: block;
        position: absolute;
        top: 0;
        left: 0;
        background: #f2f2f2;
        width: 50%;
        height: 460px;
        border: 1px solid #ccc;
        opacity: 0.9;
        padding: 25px;
        transform: translateX(-600px);
        transition: transform 0.4s ease-in-out;
    }

    .main_nav .main_menu.show {
        transform: translateX(-20px);
    }

    .main_nav .main_menu li {
        padding: 15px;
        border-bottom: 1px solid #ccc;
        font-size: 15px;
    }

    .main_nav .main_menu li:last-child {
        border-bottom: none;
    }

    .main_nav .right_menu {
        margin-right: 50px;
    }

    .showcase p {
        text-align: center;
    }

    .home_cards {
        grid-template-columns: repeat(2, 1fr);
    }

    .xbox .content {
        width: 70%;
    }

    .xbox .content p {
        display: none;
    }

    .xbox .content h2 {
        margin-bottom: 20px;
    }

    .onedrive_content p {
        width: auto;
    }

    .links .links_content {
        grid-template-columns: repeat(3, 1fr);
    }


}

@media (max-width: 500px) {

    .home_cards {
        grid-template-columns: 1fr;
    }

    .links .links_content {
        grid-template-columns: 1fr;
    }

}

